--- a/partials/navigator.html
+++ b/partials/navigator.html
@@ -1,7 +1,7 @@
 <nav class="navegacion">
     <div class="navegacion__contenedor">
         <a href="./../index.html" class="navegacion__logo">
-            <img src="./../images/logo.png" alt="Logo" height="50px">
+            <img src="images/logo.png" alt="Logo" height="50px">
         </a>
 
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -15,7 +15,7 @@
                     <a href="./../index.html">Inicio</a> 
                 </li>
                 <li>
-                    <a href="./../pages/productos.html">Productos</a>
+                    <a href="pages/productos.html">Productos</a>
                 </li>
                 <li>
                     <a href="#">Presupuesto</a>
