--- a/partials/navigator.html
+++ b/partials/navigator.html
@@ -1,6 +1,6 @@
 <nav class="navegacion">
     <div class="navegacion__contenedor">
-        <a href="./../index.html" class="navegacion__logo">
+        <a href="index.html" class="navegacion__logo">
             <img src="images/logo.png" alt="Logo" height="50px">
         </a>
 
@@ -12,7 +12,7 @@
         <div class="navegacion__menu">
             <ul>
                 <li>
-                    <a href="./../index.html">Inicio</a> 
+                    <a href="index.html">Inicio</a> 
                 </li>
                 <li>
                     <a href="pages/productos.html">Productos</a>
