--- a/partials/navigator.html
+++ b/partials/navigator.html
@@ -10,19 +10,8 @@
         </label>
 
         <div class="navegacion__menu">
-            <ul>
-                <li>
-                    <a href="index.html">Inicio</a> 
-                </li>
-                <li>
-                    <a href="pages/productos.html">Productos</a>
-                </li>
-                <li>
-                    <a href="#">Presupuesto</a>
-                </li>
-                <li>
-                    <a href="#">Contacto</a>
-                </li>
+            <ul id="lista-opciones">
+                
             </ul>
         </div>
     </div>
